RESOLVED FIXED198553
Cookies set via [WKHTTPCookieStore setCookie:] on store right after constructing WKWebView get lost
https://bugs.webkit.org/show_bug.cgi?id=198553
Summary Cookies set via [WKHTTPCookieStore setCookie:] on store right after construct...
Chris Dumez
Reported 2019-06-04 20:01:29 PDT
Cookies set via [WKHTTPCookieStore setCookie:] on store right after constructing WKWebView get lost when the store is the ephemeral one.
Attachments
Patch (6.13 KB, patch)
2019-06-04 20:10 PDT, Chris Dumez
no flags
crash log (62.22 KB, text/plain)
2019-06-05 09:28 PDT, Shawn Roberts
no flags
Chris Dumez
Comment 1 2019-06-04 20:02:18 PDT
Chris Dumez
Comment 2 2019-06-04 20:10:53 PDT
Geoffrey Garen
Comment 3 2019-06-04 20:21:59 PDT
Comment on attachment 371368 [details] Patch r=me
WebKit Commit Bot
Comment 4 2019-06-04 22:00:29 PDT
Comment on attachment 371368 [details] Patch Clearing flags on attachment: 371368 Committed r246097: <https://trac.webkit.org/changeset/246097>
WebKit Commit Bot
Comment 5 2019-06-04 22:00:30 PDT
All reviewed patches have been landed. Closing bug.
Shawn Roberts
Comment 6 2019-06-05 09:28:01 PDT
Created attachment 371409 [details] crash log
Shawn Roberts
Comment 7 2019-06-05 09:28:39 PDT
New API test added in r246097 is getting an assertion failure on Mac Debug builds TestWebKitAPI.WebKit.WKHTTPCookieStoreWithoutProcessPoolEphemeralSession run-api-tests TestWebKitAPI.WebKit.WKHTTPCookieStoreWithoutProcessPoolEphemeralSession --debug ASSERTION FAILED: m_websiteDataStore /Volumes/Data/worker/liberty-debug-archive/build/OpenSource/Source/WebKit/UIProcess/WebProcessProxy.h(128) : WebKit::WebsiteDataStore &WebKit::WebProcessProxy::websiteDataStore() const 1 0x107254da9 WTFCrash 2 0x10cdd6d1b WTFCrashWithInfo(int, char const*, char const*, int) 3 0x10d6df5a9 WebKit::WebProcessProxy::websiteDataStore() const 4 0x10dcd8bec WebKit::WebsiteDataStore::processPoolForCookieStorageOperations() 5 0x10da1e62b API::HTTPCookieStore::HTTPCookieStore(WebKit::WebsiteDataStore&) 6 0x10da1e7bd API::HTTPCookieStore::HTTPCookieStore(WebKit::WebsiteDataStore&) 7 0x10dce7596 API::HTTPCookieStore::create(WebKit::WebsiteDataStore&) 8 0x10dce74ff WebKit::WebsiteDataStore::cookieStore() 9 0x10da3d931 API::WebsiteDataStore::httpCookieStore()
Chris Dumez
Comment 8 2019-06-05 09:29:35 PDT
(In reply to Shawn Roberts from comment #7) > New API test added in r246097 is getting an assertion failure on Mac Debug > builds > > TestWebKitAPI.WebKit.WKHTTPCookieStoreWithoutProcessPoolEphemeralSession > > run-api-tests > TestWebKitAPI.WebKit.WKHTTPCookieStoreWithoutProcessPoolEphemeralSession > --debug > > ASSERTION FAILED: m_websiteDataStore > > /Volumes/Data/worker/liberty-debug-archive/build/OpenSource/Source/WebKit/ > UIProcess/WebProcessProxy.h(128) : WebKit::WebsiteDataStore > &WebKit::WebProcessProxy::websiteDataStore() const > 1 0x107254da9 WTFCrash > 2 0x10cdd6d1b WTFCrashWithInfo(int, char const*, char const*, int) > 3 0x10d6df5a9 WebKit::WebProcessProxy::websiteDataStore() const > 4 0x10dcd8bec > WebKit::WebsiteDataStore::processPoolForCookieStorageOperations() > 5 0x10da1e62b > API::HTTPCookieStore::HTTPCookieStore(WebKit::WebsiteDataStore&) > 6 0x10da1e7bd > API::HTTPCookieStore::HTTPCookieStore(WebKit::WebsiteDataStore&) > 7 0x10dce7596 > API::HTTPCookieStore::create(WebKit::WebsiteDataStore&) > 8 0x10dce74ff WebKit::WebsiteDataStore::cookieStore() > 9 0x10da3d931 API::WebsiteDataStore::httpCookieStore() Looking into this now.
Chris Dumez
Comment 9 2019-06-05 09:58:10 PDT
(In reply to Chris Dumez from comment #8) > (In reply to Shawn Roberts from comment #7) > > New API test added in r246097 is getting an assertion failure on Mac Debug > > builds > > > > TestWebKitAPI.WebKit.WKHTTPCookieStoreWithoutProcessPoolEphemeralSession > > > > run-api-tests > > TestWebKitAPI.WebKit.WKHTTPCookieStoreWithoutProcessPoolEphemeralSession > > --debug > > > > ASSERTION FAILED: m_websiteDataStore > > > > /Volumes/Data/worker/liberty-debug-archive/build/OpenSource/Source/WebKit/ > > UIProcess/WebProcessProxy.h(128) : WebKit::WebsiteDataStore > > &WebKit::WebProcessProxy::websiteDataStore() const > > 1 0x107254da9 WTFCrash > > 2 0x10cdd6d1b WTFCrashWithInfo(int, char const*, char const*, int) > > 3 0x10d6df5a9 WebKit::WebProcessProxy::websiteDataStore() const > > 4 0x10dcd8bec > > WebKit::WebsiteDataStore::processPoolForCookieStorageOperations() > > 5 0x10da1e62b > > API::HTTPCookieStore::HTTPCookieStore(WebKit::WebsiteDataStore&) > > 6 0x10da1e7bd > > API::HTTPCookieStore::HTTPCookieStore(WebKit::WebsiteDataStore&) > > 7 0x10dce7596 > > API::HTTPCookieStore::create(WebKit::WebsiteDataStore&) > > 8 0x10dce74ff WebKit::WebsiteDataStore::cookieStore() > > 9 0x10da3d931 API::WebsiteDataStore::httpCookieStore() > > Looking into this now. Trivial fix, will land shortly.
Chris Dumez
Comment 10 2019-06-05 10:01:54 PDT
(In reply to Chris Dumez from comment #9) > (In reply to Chris Dumez from comment #8) > > (In reply to Shawn Roberts from comment #7) > > > New API test added in r246097 is getting an assertion failure on Mac Debug > > > builds > > > > > > TestWebKitAPI.WebKit.WKHTTPCookieStoreWithoutProcessPoolEphemeralSession > > > > > > run-api-tests > > > TestWebKitAPI.WebKit.WKHTTPCookieStoreWithoutProcessPoolEphemeralSession > > > --debug > > > > > > ASSERTION FAILED: m_websiteDataStore > > > > > > /Volumes/Data/worker/liberty-debug-archive/build/OpenSource/Source/WebKit/ > > > UIProcess/WebProcessProxy.h(128) : WebKit::WebsiteDataStore > > > &WebKit::WebProcessProxy::websiteDataStore() const > > > 1 0x107254da9 WTFCrash > > > 2 0x10cdd6d1b WTFCrashWithInfo(int, char const*, char const*, int) > > > 3 0x10d6df5a9 WebKit::WebProcessProxy::websiteDataStore() const > > > 4 0x10dcd8bec > > > WebKit::WebsiteDataStore::processPoolForCookieStorageOperations() > > > 5 0x10da1e62b > > > API::HTTPCookieStore::HTTPCookieStore(WebKit::WebsiteDataStore&) > > > 6 0x10da1e7bd > > > API::HTTPCookieStore::HTTPCookieStore(WebKit::WebsiteDataStore&) > > > 7 0x10dce7596 > > > API::HTTPCookieStore::create(WebKit::WebsiteDataStore&) > > > 8 0x10dce74ff WebKit::WebsiteDataStore::cookieStore() > > > 9 0x10da3d931 API::WebsiteDataStore::httpCookieStore() > > > > Looking into this now. > > Trivial fix, will land shortly. <https://trac.webkit.org/changeset/246110>
Note You need to log in before you can comment on or make changes to this bug.